Fix solutions to 18 - Quadratic Equations

--- a/18 - Quadratic Equations solutions.tex
+++ b/18 - Quadratic Equations solutions.tex
@@ -26,57 +26,6 @@ $\strut#1$\kern.25em\smash{\raise.3ex\hbox{$\big)$}}$\mkern-8mu
 \begin{document}
 \maketitle
 
-\begin{frame}{Exercises}
-  \begin{columns}[T]
-    \begin{column}{0.5\textwidth}
-      \begin{enumerate}
-        \item Use factoring to find the roots of $x^2 – 22x – 48 = 0$.
-        \item Complete the square to find the possible values of $x$ for which $x^2 + 4x + 3 = 0$?
-        \item What is the value of $i^3$?
-        \item For what value(s) of $x$ does the fraction of $3$ raised to the power $x^2$ over $3$ raised to the power $3x$ equal one-ninth?  
-        
-        (\emph{Hint}: If all exponents have the same base, then we can solve the problem by equating the exponents.
-        \item Find the roots of $x = \dfrac{28}{x - 3}$.
-        \item If $b$ and $c$ are both rational numbers and one of the roots of $x^2 + bx + c = 0$ is $3 + \sqrt{2}$, find $b$ and $c$.
-        \seti
-      \end{enumerate}
-    \end{column}
-    \begin{column}{0.5\textwidth}
-      \begin{enumerate}
-        \conti
-        \item For how many different integer values of $b$ are both roots of $x^2 + bx - 16 = 0$ integers?
-        \item Let $m$ and $n$ be roots of: $x^2 − 60x + 864 = 0$.  Find a polynomial with roots $m + 1$ and $n + 1$.
-      \end{enumerate}
-    \end{column}
-  \end{columns}
-\end{frame}
-
-\begin{frame}{Challenge problems}
-  \begin{columns}[T]
-    \begin{column}{0.5\textwidth}
-      \begin{enumerate}
-        \item Find the minimum possible value of the absolute value of $(m - n)$, where $m$ and $n$ are integers satisfying $m + n = mn – 2021$. 
-        
-        (\emph{Hint}: could completing the square be useful here if the variables were all grouped on one side of the equation?)
-        \item (For fun) In the novel, “The Curious Incident of the Dog in the Nighttime,” a student in England taking his A-level college entrance exam in maths was given the following question: 
-        
-        Prove that a triangle with sides that can written in the form $n^2 +1$, $n^2 -1$ and $2n$ (where $n > 1$) is right-angled.  
-        \seti
-      \end{enumerate}
-    \end{column}
-    \begin{column}{0.5\textwidth}
-      \begin{enumerate}
-        \conti
-        \item Let $m$ and $n$ be roots of the polynomial $x^2 − 60x + 899 = 0.$  What is $m^2 + n^2$? 
-        
-        (\emph{Hint}: think about how $m^2 + n^2$ can be rewritten in terms of the sum and product of the roots $m$ and $n$).
-        \item Find all real values of $n$ such that $2^{2n} + 2^n + 1 = 73$.  
-        
-        (\emph{Hint}:  What substitution would turn this into a quadratic?)
-      \end{enumerate}
-    \end{column}
-  \end{columns}
-\end{frame}
 
 \begin{frame}{Exercises 1-4}
   \begin{columns}[T]
@@ -86,7 +35,7 @@ $\strut#1$\kern.25em\smash{\raise.3ex\hbox{$\big)$}}$\mkern-8mu
         
         $x^2 – 22x – 48 = 0$.
       \end{problem}
-      Let $x^2 - 22x - 48 = (x - a)(x - b)$, so $a + b = -22$ and $ab = -48$. Looking into divisors of $-48$ we may find that $-24$ and $2$ has a sum of $-22$, so the root of the equation are $\boxed{-22}$ and $\boxed{2}$. 
+      Let $x^2 - 22x - 48 = (x - a)(x - b)$, so $a + b = 22$ and $ab = -48$. Looking into divisors of $-48$ we may find that $24$ and $-2$ has a sum of $22$, so the root of the equation are $\boxed{-2}$ and $\boxed{24}$. 
 
       \begin{problem}
         \textbf{E2.} Complete the square to find the possible values of $x$ for which $x^2 + 4x + 3 = 0$?
@@ -121,7 +70,7 @@ $\strut#1$\kern.25em\smash{\raise.3ex\hbox{$\big)$}}$\mkern-8mu
       \begin{problem}
         \textbf{E6.} If $b$ and $c$ are both rational numbers and one of the roots of $x^2 + bx + c = 0$ is $3 + \sqrt{2}$, find $b$ and~$c$.
       \end{problem}
-      The roots are $\dfrac{-b}{2} \pm \sqrt{\dfrac{b^2 - 4c}{4}}$, so we may see that rational and irrational parts of both roots should be the same and the second root is $3 - \sqrt{2}$. $x^2 + bx + c = (x - (3 +\sqrt{2}))(x - (3 - \sqrt{2})) = x^2 - 6x + 7 = 0$. So $b = -6$ and $c = 7$.
+      The roots are $\dfrac{-b}{2} \pm \sqrt{\dfrac{b^2 - 4c}{4}}$, so we may see that rational and irrational parts of both roots should be the same and the second root is $3 - \sqrt{2}$. $x^2 + bx + c = (x - (3 +\sqrt{2}))(x - (3 - \sqrt{2})) = x^2 - 6x + 7 = 0$. So $\boxed{b = -6}$ and $\boxed{c = 7}$.
     \end{column}
     \begin{column}{0.5\textwidth}
       \begin{problem}
